...
            
            // Título
            Text("Create an account,")
                .font(.largeTitle)
                .fontWeight(.bold)
                .foregroundColor(AppColors.black)
                .accessibilityLabel("Create an account title")

            // Subtítulo
            Text("Please type full information below and we can create your account.")
                .font(.subheadline)
                .foregroundColor(AppColors.darkGrey)
                .accessibilityLabel("Subtitle: Please type full information below and we can create your account.")

            // Input para nombre
            VStack(alignment: .leading) {
                HStack {
                    Image(systemName: "person.fill")
                        .foregroundColor(AppColors.mediumGrey)
                        .padding(10)
                        .accessibilityLabel("Icon for name input")
                    TextField("Name", text: $viewModel.name)
                        .padding()
                        .background(AppColors.white)
                        .foregroundColor(AppColors.black)
                        .accessibilityLabel("Name input field")
                        .accessibilityValue(viewModel.name.isEmpty ? "Empty" : viewModel.name)
                        .onChange(of: viewModel.name) { _ in
                            verificationViewModel.validateName(viewModel.name)
                        }
                        .overlay(
                            VStack {
...
                    TextField("Email address", text: $viewModel.email)
                        .padding()
                        .keyboardType(.emailAddress)
                        .autocapitalization(.none)
                        .background(AppColors.white)
                        .foregroundColor(AppColors.black)
                        .accessibilityLabel("Email input field")
                        .accessibilityValue(viewModel.email.isEmpty ? "Empty" : viewModel.email)
                        .onChange(of: viewModel.email) { _ in
                            verificationViewModel.validateEmail(viewModel.email)
                        }
                        .overlay(
                            VStack {
...
            VStack(alignment: .leading) {
                HStack {
                    Image(systemName: "phone.fill")
                        .foregroundColor(AppColors.mediumGrey)
                        .padding(10)
                        .accessibilityLabel("Icon for phone number input")
                    TextField("Phone Number", text: $viewModel.phone)
                        .padding()
                        .accessibilityLabel("Phone number input field")
                        .accessibilityValue(viewModel.phone.isEmpty ? "Empty" : viewModel.phone)
                        .onChange(of: viewModel.phone) { _ in
                            verificationViewModel.validatePhoneNumber(viewModel.phone)
                        }
                        .overlay(
                            VStack {
...
            VStack(alignment: .leading) {
                HStack {
                    Image(systemName: "lock.fill")
                        .foregroundColor(AppColors.mediumGrey)
                        .padding(10)
                        .accessibilityLabel("Icon for password input")
                    SecureField("Password", text: $viewModel.password)
                        .padding()
                        .accessibilityLabel("Password input field")
                        .onChange(of: viewModel.password) { _ in
                            verificationViewModel.validatePassword(viewModel.password)
                        }
                        .overlay(
                            VStack {
                                Spacer().frame(height: 70)
...
                    .fontWeight(.bold)
                    .foregroundColor(AppColors.white)
                    .frame(maxWidth: .infinity)
                    .padding()
                    .background(AppColors.darkBlue)
                    .cornerRadius(20)
                    .accessibilityLabel("Join Now button")
            }
            
            // Separador
            HStack {
                Rectangle()
                    .frame(height: 1)
...
                    Text("Join with Google")
                }
                .foregroundColor(AppColors.darkBlue)
                .frame(maxWidth: .infinity)
                .padding()
                .overlay(RoundedRectangle(cornerRadius: 10).stroke(AppColors.darkBlue, lineWidth: 1))
                .accessibilityLabel("Join with Google button")
            }

            // Enlace para registrarse
            HStack {
                Text("Already have an account?")
                    .foregroundColor(AppColors.mediumGrey)
...
                    isOnLoginScreen = true
                }) {
                    Text("Log In")
                        .foregroundColor(AppColors.darkBlue)
                        .font(.footnote)
                        .fontWeight(.bold)
                        .accessibilityLabel("Log In button")
                }
            }
            .padding(.horizontal, 30)

            Spacer()
        }
...
