...
    var body: some View {
        NavigationStack{
            VStack(alignment: .leading, spacing: 16) {
                Spacer()
                
                // Tittle
                Text("Forgot Password,")
                    .font(.largeTitle)
                    .fontWeight(.bold)
                    .foregroundColor(AppColors.black)
                
                // subtittle
                Text("Please type your email below and we will give you a OTP code.")
                    .font(.subheadline)
                    .foregroundColor(AppColors.darkGrey)
                
                Spacer()
                Spacer()
                
...
                VStack(alignment: .leading) {
                    HStack {
                        if mail{
                            Image(systemName: "envelope.fill")
                                .foregroundColor(AppColors.mediumGrey)
                                .padding(10)
                            TextField("Email Address", text: $viewModel.email)
                                .keyboardType(.emailAddress)
                                .autocapitalization(.none)
                                .padding()
                                .onChange(of: viewModel.email) { _ in
                                    verificationViewModel.validateEmail(viewModel.email)
                                }
...
                        }
                        
                    }
                    .overlay(RoundedRectangle(cornerRadius: 10).stroke(AppColors.mediumGrey, lineWidth: 1))
                }
                
                // "Use phone number?"
                HStack {
                    Spacer()
                    if mail{
                        Text("Use phone number?")
                            .font(.footnote)
                            .foregroundColor(AppColors.darkBlue)
                            .padding(.top, 5)
                            .onTapGesture {
                                mail.toggle()
                            }
                    } else{
                        Text("Use mail address?")
                            .font(.footnote)
                            .foregroundColor(AppColors.darkBlue)
                            .padding(.top, 5)
                            .onTapGesture {
                                mail.toggle()
                            }
...
                        showAlert = true
                    } else{
                        viewModel.shouldNavigate = true
                    }
                    
                }) {
                    Text("Send Code")
                        .fontWeight(.bold)
                        .foregroundColor(AppColors.white)
                        .frame(maxWidth: .infinity)
                        .padding()
                        .background(AppColors.darkBlue)
                        .cornerRadius(20)
...
