...
                
                // Título
                Text("Welcome back,")
                    .font(.largeTitle)
                    .fontWeight(.bold)
                    .foregroundColor(AppColors.black)
                    .accessibilityLabel("Welcome back message")
                
                // Subtítulo
                Text("Glad to meet you again!, please login to use the app.")
                    .font(.subheadline)
                    .foregroundColor(AppColors.darkGrey)
                    .accessibilityLabel("Login prompt message")
                
                Spacer()
                Spacer()
                
                // Input para email
                VStack(alignment: .leading) {
...
                    HStack {
                        Spacer()
                        Text("Forgot password?")
                            .font(.footnote)
                            .foregroundColor(AppColors.darkBlue)
                            .padding(.top, 5)
                            .accessibilityLabel("Forgot password link")
                    }
                }
                
                Spacer()
                
                // Botón "Iniciar sesión"
...
                        Text("Log In with Google")
                    }
                    .foregroundColor(AppColors.darkBlue)
                    .frame(maxWidth: .infinity)
                    .padding()
                    .overlay(RoundedRectangle(cornerRadius: 10).stroke(AppColors.darkBlue, lineWidth: 1))
                    .accessibilityLabel("Log In with Google button")
                }
                
                // Enlace para registrarse
                HStack {
                    Text("Don’t have an account?")
                        .foregroundColor(AppColors.mediumGrey)
...
                        isOnLoginScreen = false
                    }) {
                        Text("Join Now")
                            .foregroundColor(AppColors.darkBlue)
                            .fontWeight(.bold)
                    }
                    .accessibilityLabel("Join Now link")
                }
                .padding(.top, 10)
                
                Spacer()
            }
            .padding(.horizontal, 32)
...
